fix: scope story accounting and start each new session
Limit accounting to requirement/package designers and implementations. Isolate accounting tools and status from Designer questions, preserve ordered OpenCode permissions, and evict SQLite connections left inconsistent after lock failures. Qualify native plugin success, failure and manual cancellation; deliver 0.3.42.